# BRiAl

./: .gitignore  .hgignore  .hgtags  .travis.yml  ChangeLog  LICENSE  Makefile.am  README  README.md  SConstruct  bootstrap.sh  brial.pc  brial.pc.in  common.mk  configure.ac  disttar.py  doxygen.py  ipythonrc-polybori  versionnumber
Cudd/cudd/: Makefile.am  cudd.h  cuddAPI.c  cuddAddAbs.c  cuddAddApply.c  cuddAddFind.c  cuddAddInv.c  cuddAddIte.c  cuddAddNeg.c  cuddAddWalsh.c  cuddAndAbs.c  cuddAnneal.c  cuddApa.c  cuddApprox.c  cuddBddAbs.c  cuddBddCorr.c  cuddBddIte.c  cuddBridge.c  cuddCache.c  cuddCheck.c  cuddClip.c  cuddCof.c  cuddCompose.c  cuddDecomp.c  cuddEssent.c  cuddExact.c  cuddExport.c  cuddGenCof.c  cuddGenetic.c  cuddGroup.c  cuddHarwell.c  cuddInit.c  cuddInt.h  cuddInteract.c  cuddLCache.c  cuddLevelQ.c  cuddLinear.c  cuddLiteral.c  cuddMatMult.c  cuddPriority.c  (+25 more)
Cudd/cudd/doc/: footnode.html  node1.html  node2.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html
M4RI/: Makefile.am  Makefile.in  aclocal.m4  benchmark.cc  brilliantrussian.c  brilliantrussian.cc  brilliantrussian.h  configure  configure.ac  grayflex.c  grayflex.cc  grayflex.h  matrix.cc  matrix.h  misc.c  packedmatrix.c  packedmatrix.cc  packedmatrix.h  parity.h
M4RI/m4ri/: config.h.in  debug_dump.h  misc.c  misc.h  packedmatrix.h  parity.h
M4RI/testsuite/: Makefile.in
groebner/include/: Makefile.am
groebner/include/polybori/groebner/: .h  BitMask.h  BlockOrderHelper.h  BoundedDivisorsOf.h  ChainCriterion.h  ChainVariableCriterion.h  CheckChainCriterion.h  CountCriterion.h  DegOrderHelper.h  DelayedLongLong.h  DelayedLongProduct.h  ExpGreater.h  ExpLexLess.h  FGLMStrategy.h  GetNthPoly.h  GroebnerOptions.h  GroebnerStrategy.h  HasTRepOrExtendedProductCriterion.h  IJPairData.h  IsEcart0Predicate.h  IsVariableOfIndex.h  LLReduction.h  LLReductor.h  LMLessCompare.h  LMLessComparePS.h  LargerDegreeComparer.h  LeadingTerms.h  LeadingTerms00.h  LeadingTerms11.h  LessCombinedManySizesInStrat.h  LessEcartThenLessWeightedLengthInStrat.h  LessUsedTailVariablesThenLessWeightedLengthInStrat.h  LessWeightedLengthInStrat.h  LessWeightedLengthInStratModified.h  LexBucket.h  LexHelper.h  LexOrderGreaterComparer.h  LiteralFactorization.h  LiteralFactorizationIterator.h  Long64From32BitsPair.h  (+74 more)
groebner/src/: FGLMStrategy.cc  GroebnerStrategy.cc  LexBucket.cc  LiteralFactorization.cc  LiteralFactorizationIterator.cc  Makefile.am  MatrixMonomialOrderTables.cc  PairManager.cc  PolyEntry.cc  ReductionStrategy.cc  cache_manager.h  delayed_addition.cc  dlex4data.cc  dlex4data.h  dp_asc4data.cc  dp_asc4data.h  fglm.cc  fglm.h  groebner.cc  groebner.h  groebner_alg.cc  groebner_alg.h  groebner_defs.h  interpolate.cc  interpolate.h  lexbuckets.cc  lexbuckets.h  literal_factorization.cc  literal_factorization.h  lp4data.cc  lp4data.h  nf.cc  nf.h  pairs.cc  pairs.h  polynomial_properties.cc  polynomial_properties.h  randomset.cc  randomset.h
libbrial/src/: BooleExponent.cc  BoolePolynomial.cc  CCheckedIdx.cc  CErrorInfo.cc  COrderingBase.cc  DegLexOrder.cc  Makefile.am  pbori_routines.cc
libpolybori/include/: BooleEnv.h  BooleMonomial.h  BooleSet.h  CCheckedIdx.h  COrderProperties.h  CPrintOperation.h  LexOrder.h  Makefile.am  pbori_tags.h  polybori.h
libpolybori/include/cache/: CacheManager.h
libpolybori/include/errors/: PBoRiGenericError.h
libpolybori/include/iterators/: CCuddFirstIter.h  CCuddNavigator.h  CDegLexIter.h  CDelayedTermIter.h  CExpIter.h  CRestrictedIter.h  CTermIter.h
libpolybori/include/orderings/: COrderingFacade.h  order_tags.h  order_traits.h  pbori_order.h
libpolybori/include/polybori/: BlockDegLexOrder.h  BlockDegRevLexAscOrder.h  BooleConstant.h  BooleEnv.h  BooleExponent.h  BooleMonomial.h  BoolePolyRing.h  BoolePolynomial.h  BooleSet.h  BooleVariable.h  CExtrusivePtr.h  CIdxPath.h  CIdxVariable.h  COrderProperties.h  CPrintOperation.h  CRingCore.h  CVariableNames.h  DegLexOrder.h  DegRevLexAscOrder.h  LexOrder.h  TransformedSequence.h  VariableBlock.h  WeakRingPtr.h  embed.h  pbori_defs.h  pbori_tags.h  pbori_traits.h  polybori.h
libpolybori/include/polybori/cache/: CCacheManagement.h  CDegreeCache.h  CacheManager.h
libpolybori/include/polybori/common/: CCheckedIdx.h  CExtrusivePtr.h  CWeakPtr.h  CWeakPtrFacade.h  tags.h  traits.h
libpolybori/include/polybori/cudd/: prefix.h  prefix_internal.h
libpolybori/include/polybori/diagram/: CApplyNodeFacade.h  CCuddDDFacade.h  CDDOperations.h  CNodeCounter.h
libpolybori/include/polybori/errors/: CErrorInfo.h  PBoRiError.h  PBoRiGenericError.h
libpolybori/include/polybori/except/: PBoRiError.h
libpolybori/include/polybori/factories/: CFactoryBase.h  MonomialFactory.h  PolynomialFactory.h  SetFactory.h  VariableBlock.h  VariableFactory.h
libpolybori/include/polybori/iterators/: CBidirectTermIter.h  CCuddFirstIter.h  CCuddLastIter.h  CCuddNavigator.h  CDegLexIter.h  CDelayedTermIter.h  CExpIter.h  CGenericIter.h  COrderedIter.h  CRestrictedIter.h  CStackSelector.h  CTermGenerator.h  CTermIter.h  CTermStack.h  CVariableIter.h  PBoRiOutIter.h  TransformedIterator.h
libpolybori/include/polybori/literals/: CLiteralCodes.h  CStringLiteral.h
libpolybori/include/polybori/orderings/: CBlockOrderingFacade.h  COrderingBase.h  COrderingFacade.h  COrderingTags.h  (+3 more)
libpolybori/include/ring/: CCuddInterface.h
libpolybori/include/routines/: pbori_func.h  pbori_routines_misc.h  pbori_routines_order.h
tests/: BlockDegLexOrderTest.cc  BlockDegRevLexAscOrderTest.cc  BooleConstantTest.cc  BooleEnvTest.cc  BooleExponentTest.cc  BooleMonomialTest.cc  BoolePolyRingTest.cc  BoolePolynomialTest.cc  BooleSetTest.cc  BooleVariableTest.cc  CCuddDDFacadeTest.cc  CFactoryBaseTest.cc  CStringLiteralTest.cc  DegLexOrderTest.cc  DegRevLexAscOrderTest.cc  FGLMStrategyTest.cc  GroebnerStrategyTest.cc  LexOrderTest.cc  Makefile.am  MonomialFactoryTest.cc  PBoRiErrorTest.cc  PolynomialFactoryTest.cc  PseudoLongProductTest.cc  SetFactoryTest.cc  VariableFactoryTest.cc  spolyTest.cc  term_accumulateTest.cc  weak_pointersTest.cc
(+468 files in other folders)
