include $(top_srcdir)/common.mk

noinst_LTLIBRARIES = libcudd.la

libcudd_la_SOURCES = \
	cuddAPI.c \
	cuddCache.c \
	cuddInit.c \
	cuddLCache.c \
	cuddRef.c \
	cuddTable.c \
	cuddZddFuncs.c \
	cuddZddSetop.c

cuddincludedir = $(includedir)/polybori/cudd

cuddinclude_HEADERS = \
	cudd.h \
	cuddInt.h

noinst_HEADERS = \
	util.h
