nobase_include_HEADERS = \
	polybori/groebner/add_up.h \
	polybori/groebner/BitMask.h \
	polybori/groebner/BlockOrderHelper.h \
	polybori/groebner/BoundedDivisorsOf.h \
	polybori/groebner/cache_manager.h \
	polybori/groebner/ChainCriterion.h \
	polybori/groebner/ChainVariableCriterion.h \
	polybori/groebner/CheckChainCriterion.h \
	polybori/groebner/contained_variables.h \
	polybori/groebner/CountCriterion.h \
	polybori/groebner/DegOrderHelper.h \
	polybori/groebner/dlex4data.h \
	polybori/groebner/dp_asc4data.h \
	polybori/groebner/draw_matrix.h \
	polybori/groebner/ExpGreater.h \
	polybori/groebner/ExpLexLess.h \
	polybori/groebner/FGLMStrategy.h \
	polybori/groebner/fixed_path_divisors.h \
	polybori/groebner/GetNthPoly.h \
	polybori/groebner/groebner.h \
	polybori/groebner/groebner_alg.h \
	polybori/groebner/groebner_defs.h \
	polybori/groebner/GroebnerOptions.h \
	polybori/groebner/GroebnerStrategy.h \
	polybori/groebner/HasTRepOrExtendedProductCriterion.h \
	polybori/groebner/IJPairData.h \
	polybori/groebner/interpolate.h \
	polybori/groebner/IsEcart0Predicate.h \
	polybori/groebner/IsVariableOfIndex.h \
	polybori/groebner/LargerDegreeComparer.h \
	polybori/groebner/LeadingTerms.h \
	polybori/groebner/LeadingTerms00.h \
	polybori/groebner/LeadingTerms11.h \
	polybori/groebner/LessCombinedManySizesInStrat.h \
	polybori/groebner/LessEcartThenLessWeightedLengthInStrat.h \
	polybori/groebner/LessUsedTailVariablesThenLessWeightedLengthInStrat.h \
	polybori/groebner/LessWeightedLengthInStrat.h \
	polybori/groebner/LessWeightedLengthInStratModified.h \
	polybori/groebner/LexBucket.h \
	polybori/groebner/LexHelper.h \
	polybori/groebner/LexOrderGreaterComparer.h \
	polybori/groebner/linear_algebra_step.h \
	polybori/groebner/LiteralFactorization.h \
	polybori/groebner/LiteralFactorizationIterator.h \
	polybori/groebner/ll_red_nf.h \
	polybori/groebner/LLReduction.h \
	polybori/groebner/LLReductor.h \
	polybori/groebner/LMLessCompare.h \
	polybori/groebner/LMLessComparePS.h \
	polybori/groebner/Long64From32BitsPair.h \
	polybori/groebner/lp4data.h \
	polybori/groebner/MatrixMonomialOrderTables.h \
	polybori/groebner/minimal_elements.h \
	polybori/groebner/MinimalLeadingTerms.h \
	polybori/groebner/MonomialHasher.h \
	polybori/groebner/MonomialPlusOneTerms.h \
	polybori/groebner/MonomialTerms.h \
	polybori/groebner/NBitsUsed.h \
	polybori/groebner/NextSpoly.h \
	polybori/groebner/nf.h \
	polybori/groebner/PairData.h \
	polybori/groebner/PairE.h \
	polybori/groebner/PairECompare.h \
	polybori/groebner/PairLS.h \
	polybori/groebner/PairLSCompare.h \
	polybori/groebner/PairManager.h \
	polybori/groebner/PairManagerFacade.h \
	polybori/groebner/pairs.h \
	polybori/groebner/PairStatusSet.h \
	polybori/groebner/PolyEntry.h \
	polybori/groebner/PolyEntryBase.h \
	polybori/groebner/PolyEntryIndices.h \
	polybori/groebner/PolyEntryPtrLmLess.h \
	polybori/groebner/PolyEntryReference.h \
	polybori/groebner/PolyEntryVector.h \
	polybori/groebner/PolyFromPolyEntry.h \
	polybori/groebner/PolyMonomialPairComparerLess.h \
	polybori/groebner/PolyMonomialPairComparerLexLess.h \
	polybori/groebner/polynomial_properties.h \
	polybori/groebner/PolynomialSugar.h \
	polybori/groebner/PolyPairData.h \
	polybori/groebner/PSCompareByEl.h \
	polybori/groebner/PseudoLongLong.h \
	polybori/groebner/PseudoLongProduct.h \
	polybori/groebner/randomset.h \
	polybori/groebner/RankingVector.h \
	polybori/groebner/red_tail.h \
	polybori/groebner/RedTailNth.h \
	polybori/groebner/ReductionOptions.h \
	polybori/groebner/ReductionStrategy.h \
	polybori/groebner/ReductionTerms.h \
	polybori/groebner/RelatedTerms.h \
	polybori/groebner/RelatedTermsBase.h \
	polybori/groebner/SetAssociatedMinimal.h \
	polybori/groebner/SetBitUInt.h \
	polybori/groebner/ShorterEliminationLength.h \
	polybori/groebner/ShorterEliminationLengthModified.h \
	polybori/groebner/SlimgbReduction.h \
	polybori/groebner/tables.h \
	polybori/groebner/TermsFacade.h \
	polybori/groebner/TimesConstantImplication.h \
	polybori/groebner/TimesVariableSubstitution.h \
	polybori/groebner/VariablePairData.h \
	polybori/groebner/ZeroFunction.h
