include $(top_srcdir)/common.mk

noinst_LTLIBRARIES = libbrial_base.la

libbrial_base_la_SOURCES = \
	BlockDegLexOrder.cc \
	BlockDegRevLexAscOrder.cc \
	BooleEnv.cc \
	BooleExponent.cc \
	BooleMonomial.cc \
	BoolePolynomial.cc \
	BoolePolyRing.cc \
	BooleSet.cc \
	BooleVariable.cc \
	CCheckedIdx.cc \
	CCuddFirstIter.cc \
	CCuddLastIter.cc \
	CErrorInfo.cc \
	DegLexOrder.cc \
	DegRevLexAscOrder.cc \
	LexOrder.cc \
	pbori_routines.cc \
	PBoRiError.cc
