nobase_include_HEADERS = \
	polybori/BlockDegLexOrder.h \
	polybori/BlockDegRevLexAscOrder.h \
	polybori/BooleConstant.h \
	polybori/BooleEnv.h \
	polybori/BooleExponent.h \
	polybori/BooleMonomial.h \
	polybori/BoolePolynomial.h \
	polybori/BoolePolyRing.h \
	polybori/BooleSet.h \
	polybori/BooleSetSequence.h \
	polybori/BooleVariable.h \
	polybori/cache/CacheManager.h \
	polybori/cache/CCacheManagement.h \
	polybori/cache/CDegreeCache.h \
	polybori/common/CCheckedIdx.h \
	polybori/common/CExtrusivePtr.h \
	polybori/common/CWeakPtr.h \
	polybori/common/CWeakPtrFacade.h \
	polybori/common/tags.h \
	polybori/common/traits.h \
	polybori/common/TransformedSequence.h \
	polybori/config.h \
	polybori/cudd/prefix.h \
	polybori/cudd/prefix_internal.h \
	polybori/DegLexOrder.h \
	polybori/DegRevLexAscOrder.h \
	polybori/diagram/CApplyNodeFacade.h \
	polybori/diagram/CCuddDDFacade.h \
	polybori/diagram/CDDOperations.h \
	polybori/diagram/CNodeCounter.h \
	polybori/except/CErrorInfo.h \
	polybori/except/PBoRiError.h \
	polybori/except/PBoRiGenericError.h \
	polybori/factories/CFactoryBase.h \
	polybori/factories/MonomialFactory.h \
	polybori/factories/PolynomialFactory.h \
	polybori/factories/SetFactory.h \
	polybori/factories/VariableBlock.h \
	polybori/factories/VariableFactory.h \
	polybori/iterators/CBidirectTermIter.h \
	polybori/iterators/CCuddFirstIter.h \
	polybori/iterators/CCuddLastIter.h \
	polybori/iterators/CCuddNavigator.h \
	polybori/iterators/CExpIter.h \
	polybori/iterators/CGenericIter.h \
	polybori/iterators/COrderedIter.h \
	polybori/iterators/CStackSelector.h \
	polybori/iterators/CTermGenerator.h \
	polybori/iterators/CTermIter.h \
	polybori/iterators/CTermStack.h \
	polybori/iterators/CVariableIter.h \
	polybori/iterators/PBoRiOutIter.h \
	polybori/iterators/TransformedIterator.h \
	polybori/LexOrder.h \
	polybori/literals/CLiteralCodes.h \
	polybori/literals/CStringLiteral.h \
	polybori/orderings/CBlockOrderingFacade.h \
	polybori/orderings/COrderingBase.h \
	polybori/orderings/COrderingFacade.h \
	polybori/orderings/COrderingTags.h \
	polybori/orderings/order_tags.h \
	polybori/orderings/order_traits.h \
	polybori/orderings/pbori_order.h \
	polybori/pbori_defs.h \
	polybori/polybori.h \
	polybori/ring/CCallbackWrapper.h \
	polybori/ring/CCuddCore.h \
	polybori/ring/CCuddInterface.h \
	polybori/ring/CMemberFunctionTraits.h \
	polybori/ring/CVariableNames.h \
	polybori/ring/WeakRingPtr.h \
	polybori/routines/pbori_algo.h \
	polybori/routines/pbori_algo_int.h \
	polybori/routines/pbori_algorithms.h \
	polybori/routines/pbori_func.h \
	polybori/routines/pbori_routines.h \
	polybori/routines/pbori_routines_cuddext.h \
	polybori/routines/pbori_routines_dd.h \
	polybori/routines/pbori_routines_hash.h \
	polybori/routines/pbori_routines_misc.h \
	polybori/routines/pbori_routines_order.h \
	polybori.h

noinst_HEADERS = \
	polybori/cudd/cudd.h \
	polybori/cudd/cuddInt.h
